Happnin/ClientApp/src/styles/custom.css
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
/* Uses blue for anchor/link color */
/* Provide sufficient contrast against white background */
@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900&display=swap");

@import url(https://unpkg.com/leaflet@1.6.0/dist/leaflet.css);
a {
  color: #0366d6;
}

.header {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: bold;
  font-size: 22px;
  /* line-height: 41px; */
}

.headerWelcome {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: medium;
  font-size: 40px;
  line-height: 41px;
  margin-top: 2rem;
  color: #1f1f1f;
}

.headerCreateAccount {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: medium;
  font-size: 20px;
}

.headerSubWelcome {
  font-size: 20px;
  margin-bottom: 4rem;
}

.happninUnderline {
  height: 1px;
  margin-bottom: 0.7rem;
  background-color: #d5d5d5;
}

.subHeader {
  font-family: "Montserrat";
  font-size: 0.8rem;
}

body,
label {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
}

.form-control:not(#categorySelect) {
  width: 40% !important;
}

#categorySelect {
  width: 40%;
}

.category-select {
  width: 200%;
}
.eventTable {
  border-style: solid;
  border-radius: 6px;
  border-width: 1px;
}
.event-table {
  border-collapse: separate;
}

/* Height of images in carousel is limited to 200px, the rest is hidden */
.carousel {
  overflow: hidden;
  height: 300px;
}

.card {
  border-radius: 20px;
  width: 100%;
  margin-top: 10px;
  margin-bottom: 40px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 0rem;
  padding-left: 0rem;
  box-shadow: 5px 5px 8px 0 rgba(0, 0, 0, 0.2),
    5px 5px 17px -5px rgba(0, 0, 0, 0.1);
}

.cardHappninEvent {
  max-width: 40rem;
  max-height: 16rem;
  padding-bottom: 0rem;
}

.cardSearch {
  max-width: 34rem;
  padding-left: 2rem !important;
  padding-top: 1rem;
}

.description {
  font-size: 14px;
}

.happninevent {
  border-radius: 20px;
  overflow: hidden;
  padding-left: 6rem !important;
}

.inputAgeText {
  font-size: 0.5rem;
}

.inputMargin {
  margin-right: 1rem;
}

.inputHeight {
  height: 1.5rem;
}

.submit {
  margin-bottom: 2em;
}

#accountform {
  margin-bottom: 2em;
}

#filterName {
  margin-left: 0.5em;
}

.filterInput {
  height: 1.5rem;
  margin-left: 0.5em;
}

.filterInputSmall {
  max-width: 6rem !important;
  min-width: 6rem !important;
}

.filterInputMedium {
  max-width: 12rem !important;
}

filterInputPostal {
  width: 4rem !important;
}

.findEventsHeader {
  text-align: left;
}

html,
body {
  overflow-x: hidden;
}

/*styles according to UI kit for buttons, text, and divs*/

.tertiaryText {
  color: #b1ed82;
}

.primaryButton {
  background-color: #b67b94;
  border-color: #b67b94;
  color: white;
  margin-bottom: 30px;
}

.primaryButton:hover {
  background-color: #f5aecb;
  border-color: #f5aecb;
  color: white;
}

.secondaryButton {
  background-color: white;
  color: #b67b94;
  border: solid;
  border-color: #b67b94;
}
.secondaryButton:hover {
  color: #f5aecb;
  border-color: #f5aecb;
}

.react-datetime-picker {
  margin: 20px;
}

.navMenu {
  border-radius: 0 !important;
}

#buyTicketsButton {
  float: right;
  margin-right: 20px;
  width: 4rem;
}

.card-title {
  font-weight: 700;
  font-size: 20px;
  margin-bottom: 10px;
}

.eventImage {
  padding-top: 1000px;
}

#event-image {
  width: 100%;
  height: 100%;
}

#event-image-container {
  width: 100%;
  height: 200px;
}

#map-container {
  vertical-align: right;
  border-style: solid;
  height: "20vh";
  width: "10px";
}

#updatesContainer {
  border-style: solid;
  border-radius: 6px;
  border-width: thin;
  border-color: lightgray;
}

#descriptionContainer {
  width: 550px;
  height: 250px;
  border-style: solid;
  border-radius: 5px;
  border-width: thin;
  border-color: lightgray;
}

#attendingContainer {
  width: 100%;
  height: 100px;
  background-color: lightblue;
  border-radius: 10px;
}

#weatherContainer {
  margin-right: 30px;
  margin-top: 20px;
  float: right;
  width: 6rem;
  height: 4rem;
  background-color: lightblue;
  border-radius: 10px;
  text-align: center;
  padding-bottom: 0.6rem;
}

#weather {
  padding-right: 10px;
}

.btnHomeSignUp {
  width: 8rem;
  margin-bottom: 2rem;
  display: block;
  margin: 30px auto;
  font-size: 22px;
}



.alreadyHaveAccount {
  display: block;
  margin: 30px auto;
  font-size: 0.8rem;
  text-align: center;
  margin-bottom: 4rem;
}

.homeDetails {
  font-family: "Montserrat";
  font-weight: 400;
  font-size: 1rem;
  overflow: hidden;
}

.row {
  width: 100%;
}

.rowSearch {
  margin-top: 1rem;
}

.postal {
  width: 20rem;
  display: block;
}

.searchBody {
  font-size: 0.5rem;
}

.searchIcon {
  width: 1.5rem;
  height: 1.5rem;
}

.formGroupAge {
  display: inline-block !important;
}

.container-fluid {
  padding-right: 0px;
  padding-left: 0px;
  border-radius: 0;
}

h3 {
  font-size: 1rem;
  font-weight: bold;
  font-style: italic;
}

h5 {
    font-size: 1rem;
}

.category {
  color: #4e4e4e;
}

.mapHappnin {
  height: "30vh";
  width: "50%";
  height: 100% !important;
}

.page .container div.page.container {
  padding-right: 0px;
  padding-left: 0px;
  margin-left: 0px;
  margin-right: 0px;
  width: 100%;
}

.submitEventContainer {
    padding-left: 2rem;
    padding-top: 1rem;
}

